--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,7 +33,8 @@ body {
   position: relative;
   padding-bottom: env(safe-area-inset-bottom);
   margin: 0;
-  height: 100vh;
+  height: 100%;
+  max-height: 100vh;
   /* Fallback for browsers that do not support Custom Properties */
   height: calc(var(--vh, 1vh) * 100);
   padding: 0 !important;
@@ -52,7 +53,7 @@ body::after {
   z-index: -100;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 1050px) {
   body {
     padding-bottom: calc(1.4rem + env(safe-area-inset-bottom));
   }
