--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,6 +12,23 @@
   --font-mono: var(--font-geist-mono);
 }
 
+::selection {
+  color: white;
+  background-color: #FFDE8B;
+}
+
+/* Для старых версий Firefox */
+::-moz-selection {
+  color: white;
+  background-color: #FFDE8B;
+}
+
+/* Для старых версий Safari/Chrome */
+::-webkit-selection {
+  color: white;
+  background-color: #FFDE8B;
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
@@ -21,9 +38,10 @@
 
 body {
   background: var(--background);
-  background-image: url('../../public/backgrounds/background.svg');
-  background-size: 250px;
+  background: url('../../public/backgrounds/background.svg'), linear-gradient(135deg, rgba(173, 216, 230, 0.5), rgba(0, 0, 255, 0.3));
+  background-size: contain;
   background-position: center;
+  background-repeat: repeat;
   opacity: 0.95;
   height: 100vh;
   width: 100%;
@@ -43,11 +61,12 @@ body {
 body::after {
   content: '';
   position: absolute;
-  background-color: #8181813c;
+  background-color: #c8c8c83c;
   top: 0;
   min-height: 100%;
   height: 100%;
   right: 0;
+  opacity: 1;
   left: 0;
   bottom: 0;
   z-index: -100;
