--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
 
 :root {
   --background: #f6f7f8;
-  --foreground: #f6f7f8;
+  --foreground: #171717;
 }
 
 @theme inline {
@@ -31,7 +31,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #f6f7f8;
+    --background: #0a0a0a;
     --foreground: #f6f7f8;
   }
 }
