--- a/src/components/actions-with-cities-components/ChoosingCitiesOnMap/ChoosingCitiesOnMap.scss
+++ b/src/components/actions-with-cities-components/ChoosingCitiesOnMap/ChoosingCitiesOnMap.scss
@@ -22,8 +22,9 @@
         .ol-zoom-in,
         .ol-zoom-out {
             padding: 5px 10px;
-            background-color: rgb(255, 217, 0);
+            background-color: #ebaf18eb;
             border-radius: 10px;
+            color: #E1E3E6;
         }
 
         .ol-zoom-in {
